styles/footer.css
footer {
	display: flex;
	align-items: center;
	justify-content: space-between;
	padding: 16px 20px;

	@media (max-width: 650px) {
		flex-direction: column;
		align-items: stretch;
	}

	> div {
		font-size: 14px;
	}

	> p {
		display: flex;
		align-items: center;
		gap: 0 16px;
		font-size: 14px;
		flex-wrap: wrap;

		> :is(button, a) {
			border: none;
			border-bottom: 2px solid transparent;
			transition-property: all, outline;
			padding: 4px 0;
			white-space: nowrap;
			transition-duration: .3s, 0s;

			@media (hover: hover) {
				&:hover {
					border-bottom-color: rgb(var(--g-color-accent));
					cursor: pointer;
				}
			}

			&:active {
				padding-bottom: 8px;
				padding-top: 0px;
				border-bottom-color: rgb(var(--g-color-accent));
			}
		}
	}
}

#f-theme > span {
	> [data-theme] {
		display: none;
	}

	:root[data-theme="system"] & > [data-theme="system"] {
		display: inline-block;
	}

	:root[data-theme="light"] & > [data-theme="light"] {
		display: inline-block;
	}

	:root[data-theme="dark"] & > [data-theme="dark"] {
		display: inline-block;
	}
}

